ingress-sample/ingress_rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix   #Particularily direct that path, home
        backend:
          service:
            name: frontendsrv
            port:
              number: 80
      - path: /student
        pathType: Prefix  # /student will be the path to access the tomcat 
        backend:
          service:
            name: backendsrv
            port:
              number: 8080
